; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv_dtoa_tsd.c_tsd_dtoa_ctx_dtor.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv_dtoa_tsd.c_tsd_dtoa_ctx_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dtoa_context = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dtoa_context*)* @tsd_dtoa_ctx_dtor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tsd_dtoa_ctx_dtor(%struct.dtoa_context* %0) #0 {
  %2 = alloca %struct.dtoa_context*, align 8
  store %struct.dtoa_context* %0, %struct.dtoa_context** %2, align 8
  %3 = load %struct.dtoa_context*, %struct.dtoa_context** %2, align 8
  %4 = icmp ne %struct.dtoa_context* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load %struct.dtoa_context*, %struct.dtoa_context** %2, align 8
  %7 = call i32 @jvp_dtoa_context_free(%struct.dtoa_context* %6)
  %8 = load %struct.dtoa_context*, %struct.dtoa_context** %2, align 8
  %9 = call i32 @jv_mem_free(%struct.dtoa_context* %8)
  br label %10

10:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @jvp_dtoa_context_free(%struct.dtoa_context*) #1

declare dso_local i32 @jv_mem_free(%struct.dtoa_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
